Version 8.2 - xxx edition. 2 March 2020

Fixed esxdos handler segfaults when using a file handler that was a directory


Version 8.1.1 - The Great Escape edition. 2 March 2020

Fixed starting the emulator on some Mac OS versions


Version 8.1 - The Great Escape edition. 25 February 2020


Added ZEsarUX Network Gaming protocol (ZENG), which allows you to play to any emulated game, using two ZEsarUX instances, 
located each one on any part of the world or in a local network. Games doesn't have to be modified, you can use any existing game

Added Spectrum and ZX81 online game browser. You can search & play almost any game for these machines!
Added real joystick support on Windows
Added Pentagon 16C colour mode emulation
Added 1024 KB RAM emulation for Spectrum & Pentagon
Added ZIP files support: no more need to use external unzip program
Added SCL files support: can be converted from file selector menu pressing space
Added SNA saving support
Added PZX tape file support
Added SCR to TAP file converter

Added total run time statistics 
Added checking for updates
Added sending anonymous statistics use
Added setting --disablemenuandexit: it closes the emulator when the menu is going to be opened. 
 It's the same behaviour as previous --disablemenu. Now --disablemenu only disables the menu but does not close the emulator
Added setting to disable looking for alternate character sets from sysvar 23606/7 on ocr functions
Added DataDrive HiLow emulation (beta)
Added Borland Gui Style
Added setting to reset configuration file to default values
Added setting to choose cpu type

Added ZRCP commands:
-cpu-code-coverage: working with code coverage
-cpu-history: working with cpu history
-extended-stack: having an internal stack for debugging stack value types
-get-ui-io-ports: to get keyboard state and joystick
-get-snapshot: get a ZSF snapshot from ZRCP
-print-footer: print message on footer
-put-snapshot: put a ZSF snapshot from ZRCP
-send-keys-event: simulates key press/release