@@ -1,5 +1,6 @@
 Version 8.2 - xxx edition. 2 March 2020
 
+Added F key to toggle top cpu speed
 Fixed esxdos handler segfaults when using a file handler that was a directory
 
 
